--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ nodemailer_pass= gukcdlcdyioajrkp
 signup_Secret_Token="varunjoseph"
 
 login_secret_token="varun"
+redis_url=rediss://red-clatgt6g1b2c73a87jg0:2c1lyw25hkXTqIpGdYZ6VqZJylydzULT@oregon-redis.render.com:6379
